# parlant

./: .gitignore  =3.3  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.server  Justfile  LICENSE  README.md  ROADMAP.md  initialize_repo.py  mypy.ini  package-lock.json  parlant_config.toml  pyproject.toml  pytest.ini  pytest_stochastics.json  setup_hooks.py
dspy-local-optimizer/: .gitignore  README.md  pyproject.toml
dspy-local-optimizer/scripts/: run_optimization.py
dspy-local-optimizer/src/dspy_local_optimizer/: __init__.py
dspy-local-optimizer/src/dspy_local_optimizer/core/: metrics.py  models.py  ollama.py  openai.py
dspy-local-optimizer/src/dspy_local_optimizer/optimizers/: guideline_optimizer.py
dspy-local-optimizer/tests/: test_copro_optimizer.py
sdk/: .gitignore  Justfile  pyproject.toml
sdk/src/emcie/sdk/: __init__.py
sdk/tests/: conftest.py  test_client_cli_via_api.py  test_utilities.py
server/: .gitignore  Dockerfile  Justfile  _config.json  mypy.ini  pyproject.toml  pytest.ini  pytest_stochastics.json  pytest_stochastics_config.json  ruff.toml
server/.devcontainer/: Dockerfile  devcontainer.json
server/api/chat/react-app/chat/: package.json
server/api/chat/react-app/chat/src/: App.tsx
server/src/emcie/server/: __init__.py  agents.py  api.py  async_utils.py  base.py  base_models.py  behavioral_change_evaluation.py  coherence_checker.py  common.py  configuration_validator.py  contextual_correlator.py  evaluation_service.py  guideline_connection_proposer.py  guidelines.py  guides.py  indexer.py  llm_engines.py  logger.py  main.py  mc.py  models.py  sessions.py  threads.py  utils.py
server/src/emcie/server/adapters/db/: json_file.py  transient.py
server/src/emcie/server/adapters/nlp/: lakera.py  openai.py  together.py
server/src/emcie/server/api/: agents.py  app.py  common.py  connections.py  context_variables.py  contextual_variables.py  glossary.py  guidelines.py  index.py  plugins.py  services.py  sessions.py  terminology.py  threads.py
server/src/emcie/server/core/: agents.py  async_utils.py  common.py  context_variables.py  contextual_correlator.py  emissions.py  end_users.py  evaluations.py  glossary.py  guideline_connections.py  guideline_tool_associations.py  guidelines.py  logger.py  logging.py  mc.py  models.py  persistence.py  plugins.py  sessions.py  terminology.py  threads.py  tools.py
server/src/emcie/server/core/emission/: event_buffer.py  event_publisher.py
server/src/emcie/server/core/engines/: emission.py  types.py
server/src/emcie/server/core/generation/: embedders.py  schematic.py  schematic_generators.py
server/src/emcie/server/core/nlp/: embedding.py  generation.py  moderation.py
server/src/emcie/server/core/persistence/: chroma_database.py  common.py  document_database.py  json_file_database.py  transient_database.py
server/src/emcie/server/core/services/: openapi.py  plugins.py
server/src/emcie/server/engines/: common.py  event_emitter.py
server/src/emcie/server/engines/alpha/: coherence_checker.py  configuration_validator.py  engine.py  event_producer.py  guide_filter.py  guideline_filter.py  guideline_proposer.py  guideline_proposition.py  guideline_tool_association.py  guideline_tool_associations.py  message_event.py  message_event_producer.py  prompt_builder.py  tool_call_evaluation.py  tool_caller.py  tool_calls.py  tool_event_producer.py  utils.py
server/src/emcie/server/evaluators/: __init__.py
server/src/emcie/server/indexing/: behavioral_change_evaluation.py  coherence_checker.py  common.py  guideline_connection_proposer.py  indexer.py
server/src/emcie/server/llm/: json_generators.py  schematic_generators.py  text_generators.py
server/src/emcie/server/providers/: openai.py
server/tests/: conftest.py  test_api.py  test_coherence.py  test_configuration_validator.py  test_evaluator.py  test_guideline_connection_proposer.py  test_indexer.py  test_loading_configuration.py  test_mc.py  test_utilities.py  tool_utilities.py  tools_utilities.py
server/tests/adapters/db/: test_chroma_database.py  test_json_file_storage.py
server/tests/adapters/persistence/: test_chroma_database.py  test_json_file_storage.py
server/tests/api/: conftest.py  test_agents.py  test_connections.py  test_context_variables.py  test_glossary.py  test_guidelines.py  test_index.py  test_plugins.py  test_services.py  test_sessions.py  test_terminology.py  test_threads.py  utils.py
server/tests/core/: test_guideline_connections.py  test_mc.py  test_plugins.py
server/tests/core/engines/alpha/: conftest.py  test_baseline_scenarios.py  test_engine.py  test_engine_advanced.py  test_finding_relevant_terms.py  test_guideline_proposer.py  test_supervision.py  test_user_story_scenarios.py  utils.py
server/tests/core/nlp/: test_generation.py
server/tests/core/persistence/: test_chroma_database.py  test_json_file_storage.py  test_matches_filters.py
server/tests/core/services/: test_openapi.py  test_plugins.py
server/tests/core/services/indexing/: conftest.py  test_coherence.py  test_evaluator.py  test_guideline_connection_proposer.py  test_indexer.py
server/tests/core/services/tools/: test_openapi.py  test_plugin_client.py  test_plugin_clients.py  test_plugins.py
server/tests/e2e/: conftest.py  test_client_cli_via_api.py  test_emcie_server_cli.py  test_server_cli.py  test_utilities.py
server/tests/engines/alpha/: test_coherence.py  test_engine.py  test_engine_advanced.py  test_finding_relevant_terms.py  test_guideline_filter.py  test_guideline_proposer.py  test_loading_configuration.py  test_supervision.py  test_terminology.py  test_tools.py  test_tools_bdd.py
server/tests/engines/alpha/persistence/: test_json_file_storage.py
server/tests/features/engines/alpha/: guideline_connections.feature  message_agent_with_rules.feature  message_agent_with_tools.feature  proactive_agent.feature  supervision.feature  terminology.feature  vanilla_agent.feature  vanilla_configuration.feature
server/tests/indexing/: test_coherence.py  test_evaluator.py  test_guideline_connection_proposer.py  test_indexer.py
(+548 files in other folders)
