[tool.poetry]
name = "emcie"
version = "0.4.1-alpha.1"
description = ""
authors = ["Yam Marcovitz <yam@emcie.co>", "Dor Zohar <dor@emcie.co>"]
readme = "README.md"
packages = [{ include = "emcie", from = "src" }]

[tool.poetry.scripts]
emcie-server = "emcie.server.bin.server:main"
emcie = "emcie.server.bin.client:main"

[tool.poetry.dependencies]
aiofiles = "^24.1.0"
aiopenapi3 = "^0.6.0"
anthropic = "^0.37.1"
chromadb = "^0.5.4"
uvicorn = "^0.30.5"
click = "^8.1.7"
click-completion = "^0.5.2"
coloredlogs = "^15.0.1"
contextvars = "^2.4"
emcie-common = "0.4.1-alpha.1"
fastapi = "^0.112.0"
google-generativeai = "^0.8.3"
httpx = "^0.27.0"
jsonfinder = "^0.4.2"
jsonschema = "^4.23.0"
lagom = "^2.6.0"
more-itertools = "^10.3.0"
nanoid = "^2.0.0"
networkx = { extras = ["default"], version = "^3.3" }
openai = "^1.45.0"
openapi3-parser = "^1.1.17"
python = "^3.12"
python-dateutil = "^2.8.2"
python-dotenv = "^1.0.1"
requests = "^2.32.3"
rich = "^13.7.1"
semver = "^3.0.2"
tabulate = "^0.9.0"
tenacity = "^8.4.2"
tiktoken = "^0.7.0"
together = "^1.2.12"
tokenizers = "^0.19.1"
types-aiofiles = "^24.1.0.20240626"
types-jsonschema = "^4.22.0.20240610"
types-tqdm = "^4.66.0.20240417"

[tool.poetry.group.dev.dependencies]
httpx = "^0.27.0"
ipython = "^8.26.0"
mypy = "^1.11.1"
pep8-naming = "^0.13.3"
pytest = "^8.0.0"
pytest-asyncio = "^0.23.5"
pytest-bdd = "^7.1.2"
pytest-cov = "^5.0.0"
pytest-stochastics = "v0.2.4"
pytest-tap = "^3.4"
python-dotenv = "^1.0.1"
ruff = "^0.5.6"
types-python-dateutil = "^2.8.19.20240106"
types-requests = "^2.32.0.20240712"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
