[tool.poetry]
name = "emcie-sdk"
version = "0.4.1-alpha.1"
description = ""
authors = ["Yam Marcovitz <yam@emcie.co>", "Dor Zohar <dor@emcie.co>"]
readme = "README.md"
packages = [{ include = "emcie", from = "src" }]

[tool.poetry.scripts]
emcie = "emcie.sdk.bin.emcie:main"

[tool.poetry.dependencies]
python = "^3.12"
emcie-common = "0.4.1-alpha.1"
click = "^8.1.7"
tabulate = "^0.9.0"
requests = "^2.32.3"
rich = "^13.9.2"
tqdm = "^4.66.5"
click-completion = "^0.5.2"


[tool.poetry.group.dev.dependencies]
emcie-common = { path = "../common", develop = true }
emcie-server = { path = "../server", develop = true }
mypy = "^1.11.1"
ruff = "^0.5.6"
pytest = "^8.3.2"
pytest-asyncio = "^0.23.8"
httpx = "^0.27.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
