[tool.poetry]
name = "emcie-sdk"
version = "0.4.1-alpha.1"
description = ""
authors = ["Yam Marcovitz <yam@emcie.co>", "Dor Zohar <dor@emcie.co>"]
readme = "README.md"
packages = [{ include = "emcie", from = "src" }]

[tool.poetry.scripts]
emcie = "emcie.sdk.bin.emcie:main"

[tool.poetry.dependencies]
click = "^8.1.7"
click-completion = "^0.5.2"
emcie-common = "0.4.1-alpha.1"
python = "^3.12"
emcie-common = "0.4.1-alpha.1"
click = "^8.1.7"
requests = "^2.32.3"
rich = "^13.9.2"
tabulate = "^0.9.0"
tqdm = "^4.66.5"


[tool.poetry.group.dev.dependencies]
emcie-common = { path = "../common", develop = true }
emcie-server = { path = "../server", develop = true }
httpx = "^0.27.2"
mypy = "^1.11.1"
pytest = "^8.3.2"
pytest-asyncio = "^0.23.8"
pytest-stochastics = {git = "ssh://git@github.com/emcie-co/pytest-stochastics.git", tag="v0.2.3"}
pytest-tap = "^3.4"
ruff = "^0.5.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
