[tool.poetry]
name = "emcie-server"
version = "0.1.0"
description = ""
authors = ["Yam Marcovic <ymarcov@gmail.com>"]
readme = "README.md"
packages = [{include = "emcie", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
fastapi = "^0.109.2"
nanoid = "^2.0.0"
python-dateutil = "^2.8.2"
python-dotenv = "^1.0.1"
lagom = "^2.6.0"
tiktoken = "^0.7.0"
openai = "^1.12.0"
pyautogen = "^0.2.28"
jsonfinder = "^0.4.2"
more-itertools = "^10.3.0"
uvicorn = "^0.30.1"
click = "^8.1.7"
click-completion = "^0.5.2"
requests = "^2.32.3"
tabulate = "^0.9.0"
rich = "^13.7.1"
aiofiles = "^24.1.0"
types-aiofiles = "^24.1.0.20240626"
tenacity = "^8.4.2"
loguru = "^0.7.2"


[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"
pytest = "^8.0.0"
pytest-asyncio = "^0.23.5"
flake8 = "^7.0.0"
pep8-naming = "^0.13.3"
python-dotenv = "^1.0.1"
types-python-dateutil = "^2.8.19.20240106"
pytest-bdd = "^7.1.2"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
