[tool.poetry]
name = "emcie-server"
version = "0.3.1-alpha.2"
description = ""
authors = ["Yam Marcovitz <yam@emcie.co>", "Dor Zohar <dor@emcie.co>"]
readme = "README.md"
packages = [{ include = "emcie", from = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
emcie-common = "0.3.1-alpha.2"
fastapi = "^0.112.0"
nanoid = "^2.0.0"
python-dateutil = "^2.8.2"
python-dotenv = "^1.0.1"
lagom = "^2.6.0"
tiktoken = "^0.7.0"
openai = "^1.12.0"
jsonfinder = "^0.4.2"
more-itertools = "^10.3.0"
uvicorn = "^0.30.5"
click = "^8.1.7"
click-completion = "^0.5.2"
requests = "^2.32.3"
tabulate = "^0.9.0"
rich = "^13.7.1"
aiofiles = "^24.1.0"
types-aiofiles = "^24.1.0.20240626"
tenacity = "^8.4.2"
jsonschema = "^4.23.0"
types-jsonschema = "^4.22.0.20240610"
networkx = { extras = ["default"], version = "^3.3" }
chromadb = "^0.5.4"
tokenizers = "^0.19.1"
httpx = "^0.27.0"
openapi3-parser = "^1.1.17"
aiopenapi3 = "^0.6.0"
coloredlogs = "^15.0.1"
contextvars = "^2.4"


[tool.poetry.group.dev.dependencies]
emcie-common = { path = "../common", develop = true }
mypy = "^1.11.1"
pytest = "^8.0.0"
pytest-asyncio = "^0.23.5"
pep8-naming = "^0.13.3"
python-dotenv = "^1.0.1"
types-python-dateutil = "^2.8.19.20240106"
pytest-bdd = "^7.1.2"
httpx = "^0.27.0"
ipython = "^8.26.0"
ruff = "^0.5.6"
types-requests = "^2.32.0.20240712"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
